--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -16,7 +16,7 @@
 <!-- Navigation bars-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="images/logo.png" width="60">
+    <img src="images/brand.png" width="60">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -41,18 +41,18 @@
     <h3 class="name mt-4">CONTACT</h3>
     <hr class="contact_hr mb-5">
         <div class="row">
-                <div class="col-6" style="text-align: center;">
-                        <img src="images/profile.jpg" width="200" class="ml-5 mb-5 rounded-circle">
+                <div class="col-5" style="text-align: center;">
+                        <img src="images/profile.jpg" width="200" class="mb-5 rounded-circle">
                 </div>
-                <div class="col-6">
+                <div class="col-7">
                         <img src="images/email.png" width="40">
-                        <pre class="d-inline ml-3">jutaporn.work@gmail.com</pre>
+                        <p class="d-inline ml-0">jutaporn.work@gmail.com</p>
                         <br><br>
                         <img src="images/phone.png" width="40">
-                        <pre class="d-inline ml-3">099-2922662</pre>
+                        <p class="d-inline ml-1">099-2922662</p>
                         <br><br>
                         <img src="images/map.png" width="40">
-                        <pre class="d-inline ml-3">13 Moo.3, Tha Duea, Doitao, Chiang Mai 50260, Thailand</pre>
+                        <p class="d-inline ml-1">13 Moo.3, Tha Duea, Doitao, Chiang Mai 50260, Thailand</p>
                 </div>
               </div>
 </div>
@@ -67,7 +67,7 @@
     </div>
 
     <div >
-        <img src="images/logo.png" width="50" class="mt-2 ml-3 "><br>
+        <img src="images/brand.png" width="50" class="mt-2 ml-3 "><br>
          <i class="far fa-copyright ml-3" style="color: #fff;font-size:12px;"> &nbsp; J.KAMPEERA-IN. ALL RIGHTS RESERVED.</i>
       </div>
 
