--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -16,7 +16,7 @@
 <!-- Navigation bars-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="images/logo.png" width="60">
+    <img src="images/brand.png" width="60">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -66,7 +66,6 @@
           </div>
 
           <div class="col-sm-6">
-           <img src="images/gable.png" width="20%" style="float: right;" class="mr-2 mt-3">
            <h5 class="mt-3">Project Name : Monitoring gateway</h5> 
            <h5>Period : 3 Month (Internship)</h5>
            <h5 class="mt-4">Project Description </h5>
@@ -169,7 +168,7 @@
     </div>
 
     <div >
-        <img src="images/logo.png" width="50" class="mt-2 ml-3 "><br>
+        <img src="images/brand.png" width="50" class="mt-2 ml-3 "><br>
          <i class="far fa-copyright ml-3" style="color: #fff;font-size:12px;"> &nbsp; J.KAMPEERA-IN. ALL RIGHTS RESERVED.</i>
       </div>
 
